[package]
name = "aap"
version = "0.1.0"
authors = ["Chad Baxter <cbax@doslabelectronics.com>"]
edition = "2018"
description = "Saturate the bad guys' databases."
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
fakeit = "1.1.1"
rand = "0.8.3"
spinners = "1.2.0"

[dependencies.reqwest]
version = "0.11.3"
features = ["multipart"]