[package]
name = "aap"
version = "0.3.1"
authors = ["Chad Baxter <cbax@doslabelectronics.com>"]
edition = "2018"
description = "Saturate the bad guys' databases."
repository = "https://github.com/LogoiLab/ActiveAntiPhish"
license = "GPL-3.0"
readme = "README.md"
keywords = ["security", "cli", "defensive", "utility"]
categories = ["command-line-utilities", "network-programming"]

exclude = [
    "kits",
    "misc",
    "rules",
    "ADVISORIES.md",
    "LICENSE"
]

[dependencies]
clap = "2.33.3"
fakeit = "1.1.1"
luhn = "1.0.1"
rand = "0.8.3"
spinners = "1.2.0"

[dependencies.reqwest]
version = "0.11.3"
features = ["multipart", "blocking"]
